<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kotlinchallenge30days.addaddressscreen.AddAddressViewModel" />

        <variable
            name="addressObj"
            type="com.kotlinchallenge30days.database.Address" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    style="@style/black12"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvName"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@{addressObj.name}"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvContactNumber"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etName"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/contact_number" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etContactNumber"
                    android:text="@{addressObj.phone}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvContactNumber"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmailAddress"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etContactNumber"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/email_address" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmailAddress"
                    android:text="@{addressObj.email}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvEmailAddress"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAddress"
                    style="@style/black14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etEmailAddress"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/address" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSociety"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAddress"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/apartment_society" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etSociety"
                    android:text="@{addressObj.society}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvSociety"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLandmark"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etSociety"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/landmark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLandmark"
                    android:text="@{addressObj.landmark}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvLandmark"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvArea"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etLandmark"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/area" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etArea"
                    android:text="@{addressObj.area}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvArea"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCity"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etArea"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/city" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCity"
                    android:text="@{addressObj.city}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvCity"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvState"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etCity"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/state" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etStateName"
                    android:text="@{addressObj.state}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvState"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPincode"
                    style="@style/black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etStateName"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/pincode" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPincode"
                    android:text="@{addressObj.pincode}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@+id/tvPincode"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_white_rounded"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp" />

            </RelativeLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_primary_rounded"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pbLogin"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>